fixing skills readability on mobile

--- a/src/css/Skills.css
+++ b/src/css/Skills.css
@@ -65,6 +65,6 @@
         max-width: 100%;
       }
       .skillCategory{
-        scale: .72;
+        padding: 0 16px
       }
   }
